ESQL: add UP convention evaluators to RoundTo (wiring + @Evaluator processUp methods)